# Seven-wonder-duel-in-C

./: .gitignore  CMakeLists.txt  README.md  Rapport_2.docx  test.cpp  test.hpp  tmpclaude-d340-cwd
7WondersDuel/: 7WondersDuel.pro  a_propos.cpp  a_propos.h  a_propos.ui  batimentwidget.cpp  batimentwidget.h  batimentwidget.ui  carte_bat_merv.h  cartewidget.h  jetonprogreswidget.cpp  jetonprogreswidget.h  jetonprogreswidget.ui  jeu.cpp  jeu.h  joueur.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  merveillewidget.cpp  merveillewidget.h  merveillewidget.ui  partie.cpp  partie.h  plateau.cpp  plateau.h  resource.qrc  resource.qrc.autosave  tmpclaude-cc45-cwd  utils.cpp  wondersException.cpp
Code/: batiment.cpp  carte.cpp  carte.h  carte_bat_merv.cpp  carte_bat_merv.h  jeu.cpp  jeu.h  joueur.cpp  joueur.h  main.cpp  partie.cpp  partie.h  pioche.h  plateau.cpp  plateau.h  projet.h  utils.cpp  variable.h  wondersException.h
Conception/UML/: Diagramme_plantuml
Rapport/: Compte-Rendu_n°2.md
Rapport/Brouillons/: Rapport_Structure.docx
console/: carte_bat_merv.h  code  jeu.cpp  joueur.cpp  partie.cpp  partie.h  utils.h
docs/uml/: UML.drawio
testAffichageCarte/: CMakeLists.txt  carte.cpp  carte.hpp  carte_bat_merv.cpp  carte_bat_merv.h  jeu.cpp  joueur.cpp  joueur.h  main.cpp  partie.cpp  partie.h  plateau.cpp  plateau.h  test
